update border color from tomato to #ff4300 in Sidebar and Orders styles

--- a/src/pages/Orders/Orders.css
+++ b/src/pages/Orders/Orders.css
@@ -3,7 +3,7 @@
     grid-template-columns: 0.5fr 2fr 1fr 1fr 1fr;
     align-items: start;
     gap: 30px;
-    border: 1px solid tomato;
+    border: 1px solid #ff4300;
     margin: 30px 0px;
     font-size: 14px;
     padding: 20px;
@@ -25,7 +25,7 @@
 
 .order-item select{
     background-color: #ffe8e4;
-    border: 1px solid tomato;
+    border: 1px solid #ff4300;
     width: max(11vw,120px);
     padding: 10px;
     outline: none;
